# library-management-BE

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: exception.py  exception_handler.py
app/data/: authors.csv  categories.csv  publishers.csv  staff.csv
app/db/: database.py
app/dependencies/: auth.py
app/models/: __init__.py  author.py  base.py  book.py  bookcopy.py  borrow.py  category.py  fine.py  member.py  publisher.py  staff.py
app/observability/: metrics.py  otel.py
app/routers/: auth_router.py  author_router.py  book_router.py  category_router.py  member_router.py  metrices_router.py  publisher_router.py
app/schemas/: auth_schema.py  author_schema.py  book_schema.py  category_schema.py  member_schema.py  publisher_schema.py
app/service/: auth_service.py  author_service.py  base_service.py  book_service.py  category_service.py  member_service.py  publisher_service.py  seed_service.py
app/settings/: config.py
app/utils/: base_enum.py  message.py  response.py  security.py
observability_stack/: compose.yml  prometheus.yml
