[tool.poetry]
package-mode = false

[project]
name = "library-management"
version = "0.1.0"
description = "Library Management System with FastAPI"
authors = [
    { name = "saurav j", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "cryptography (>=46.0.6,<47.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.61b0,<0.62)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
